--- a/Project1/CMakeLists.txt
+++ b/Project1/CMakeLists.txt
@@ -4,11 +4,9 @@ find_package( OpenCV REQUIRED )
 include_directories( ${OpenCV_INCLUDE_DIRS} )
 link_libraries( ${OpenCV_LIBS} )
 
-set(PROGRAMS
-    imgDisplay
-    vidDisplay
-    )
+add_executable( imgDisplay src/imgDisplay.cpp )
 
-foreach(PROG ${PROGRAMS})
-    add_executable( ${PROG} src/${PROG}.cpp)
-endforeach()
+add_executable( vidDisplay 
+    src/vidDisplay.cpp 
+    src/filter.cpp
+)
