--- a/Project2/CMakeLists.txt
+++ b/Project2/CMakeLists.txt
@@ -11,7 +11,7 @@ find_package( OpenCV REQUIRED )
 include_directories( ${OpenCV_INCLUDE_DIRS} )
 
 # Executable
-add_executable( readfiles src/readfiles.cpp src/csv_util.cpp )
+add_executable( readfiles src/readfiles.cpp )
 target_link_libraries( readfiles ${OpenCV_LIBS} )
 
 add_executable( imgDisplay
