--- a/Project2/CMakeLists.txt
+++ b/Project2/CMakeLists.txt
@@ -10,6 +10,11 @@ include_directories(${CMAKE_SOURCE_DIR}/include)
 find_package( OpenCV REQUIRED )
 include_directories( ${OpenCV_INCLUDE_DIRS} )
 
+# ONNX Runtime
+set(ONNXRUNTIME_ROOT "$ENV{HOME}/libs/onnxruntime-linux-x64-1.17.1")
+include_directories(${ONNXRUNTIME_ROOT}/include)
+link_directories(${ONNXRUNTIME_ROOT}/lib)
+
 # Executable
-add_executable( readfiles src/readfiles.cpp )
-target_link_libraries( readfiles ${OpenCV_LIBS} )
+add_executable( readfiles src/readfiles.cpp src/faceDetect.cpp )
+target_link_libraries( readfiles ${OpenCV_LIBS} onnxruntime )
